Add translated files

--- a/themes/docsy/layouts/partials/feedback.html
+++ b/themes/docsy/layouts/partials/feedback.html
@@ -13,10 +13,10 @@
     display: block;
   }
 </style>
-<h2 class="feedback--title">Feedback</h2>
-<p class="feedback--question">Was this page helpful?</p>
-<button class="feedback--answer feedback--answer-yes">Yes</button>
-<button class="feedback--answer feedback--answer-no">No</button>
+<h2 class="feedback--title">反馈</h2>
+<p class="feedback--question">该页面是否对您有帮助？</p>
+<button class="feedback--answer feedback--answer-yes">是</button>
+<button class="feedback--answer feedback--answer-no">否</button>
 <p class="feedback--response feedback--response-yes">
   {{ .yes | safeHTML }}
 </p>
