--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -17,8 +17,9 @@
         {{ end }}
       </div>
       <div class="col-12 col-sm-4 text-center py-2 order-sm-2">
-        {{ with .Site.Params.copyright }}<small class="text-white">Copyright &copy; 2018-{{ now.Year }} {{ .}} <br>{{ "Documentation Distributed under CC BY 4.0" }}</small>{{ end }}
+        {{ with .Site.Params.copyright }}<small class="text-white">版权所有 &copy; 2018-{{ now.Year }} {{ .}} <br>{{ "Kubeflow 文档基于 CC 4.0 协议分发" }}</small>{{ end }}
         {{ with .Site.Params.privacy_policy }}<small class="ml-1"><a href="{{ . }}" target="_blank">{{ T "footer_privacy_policy" }}</a></small>{{ end }}
+        <br><small class="text-white">本中文翻译由 <a href="https://github.com/uhhc/kubeflow-website-cn">uhhc</a> 维护</small>
         {{ if not .Site.Params.ui.footer_about_disable }}
           {{ with .Site.GetPage "about" }}<p class="mt-2"><a href="{{ .RelPermalink }}">{{ .Title }}</a></p>{{ end }}
         {{ end }}
