--- a/layouts/shortcodes/pipelines-compatibility.html
+++ b/layouts/shortcodes/pipelines-compatibility.html
@@ -1,8 +1,5 @@
-<p><i>Due to
-<a href="https://github.com/kubeflow/pipelines/issues/1700">kubeflow/pipelines#1700</a>,
-the container builder in Kubeflow Pipelines currently prepares credentials for
-Google Cloud Platform (GCP) only. As a result, the container builder supports
-only Google Container Registry. However, you can store the container images on
-other registries, provided you set up the credentials correctly to fetch
-the image.</i>
+<p><i>根据
+<a href="https://github.com/kubeflow/pipelines/issues/1700">kubeflow/pipelines#1700</a>，
+Kubeflow Pipelines 中的容器构建器只有 Google Cloud Platform (GCP) 的证书，因此容器构建器目前仅支持 Google Container Registry。
+不过只要你配置了其它镜像仓库的证书你就可以把镜像存储到这些镜像仓库中。</i>
 </p>
